# M2-SSE-AL-PADD

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml  lombok.config  pom.xml
.github/workflows/: docker.yml
backend/alert-service/: Dockerfile  README.md  build_image.sh  pom.xml  start_in_docker.sh
backend/data-service/: Dockerfile  README.md  pom.xml
backend/gateway/: nginx.conf
backend/health-service/: Dockerfile  README.md  pom.xml
backend/notification-service/: CMakeLists.txt  Dockerfile  README.md
backend/notification-service/include/: database_service.h  email_service.h  notification_service.h
backend/notification-service/src/: database_service.cpp  email_service.cpp  main.cpp  notification_service.cpp
backend/user-service/: .env.example  .gitignore  Dockerfile  package-lock.json  package.json
backend/user-service/config/: database.ts  swagger.ts
backend/user-service/docker/: entrypoint.sh
backend/user-service/resources/: Insomnia_2024-10-12.json
backend/user-service/start/: routes.ts
docs/: CodeStructure.md  HowToContribute.md  HowToRun.md  HowToUse.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx
frontend/src/adapters/: user.ts
frontend/src/api/: auth.ts  relations.ts  users.ts
frontend/src/components/: Button.tsx  Header.tsx  HealthCard.tsx  PatientCard.tsx  (+4 more)
house/: pom.xml
house/sensor-simulator/: Dockerfile  pom.xml
house/smartphone/: README.md  pom.xml
sensor-simulator/: Dockerfile  pom.xml
(+173 files in other folders)
